--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.7",
     "chalk": "^5.3.0",
     "chalk-animation": "^2.0.3",
+    "dotenv": "^16.4.5",
     "figlet": "^1.8.0",
     "inquirer": "^12.0.0",
     "nanospinner": "^1.1.0"
